# src/Http/Schema/PlayerRank.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Http\Schema;
+
+class PlayerRank
+{
+    public function __construct(public int $id, public string $username, public float $rank)
+    {
+    }
+}
